--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "argon2": "^0.27.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
