--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "tsc && node app",
+    "watch": "nodemon --watch '*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
