--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-thunk": "^2.1.0",
-    "node-sass": "^4.14.1",
+    "@welldone-software/why-did-you-render": "^6.0.0-rc.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.29.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
