--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "argon2": "^0.27.0",
+    "aws-sdk": "^2.799.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
