--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "@types/aws-sdk": "^2.7.0",
+    "@types/buffer-to-stream": "^1.0.0",
     "argon2": "^0.27.0",
     "aws-sdk": "^2.799.0",
     "body-parser": "^1.19.0",
+    "buffer-to-stream": "^1.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
