--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,8 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@types/aws-sdk": "^2.7.0",
     "@types/buffer-to-stream": "^1.0.0",
+    "@types/uuid": "^8.3.0",
     "argon2": "^0.27.0",
     "aws-sdk": "^2.799.0",
     "body-parser": "^1.19.0",
@@ -41,6 +41,7 @@
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.22.2",
-    "sequelize-typescript": "^1.1.0"
+    "sequelize-typescript": "^1.1.0",
+    "uuid": "^8.3.1"
   }
 }
