--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,9 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
+    "@types/react-test-renderer": "^17.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
