--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,8 +52,10 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
     "@types/react-test-renderer": "^17.0.0",
+    "@types/redux-mock-store": "^1.0.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
     "enzyme": "^3.11.0",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
